@@ -2188,7 +2188,7 @@ public class BasicStream
         {       
             "abstract", "assert", "boolean", "break", "byte", "case", "catch",
             "char", "checkedCast", "class", "clone", "const", "continue", "default", "do",
-            "double", "else", "equals", "extends", "false", "final", "finalize",
+            "double", "else", "enum", "equals", "extends", "false", "final", "finalize",
             "finally", "float", "for", "getClass", "goto", "hashCode", "if",
             "implements", "import", "instanceof", "int", "interface", "long",
             "native", "new", "notify", "notifyAll", "null", "package", "private",
