@@ -120,7 +120,7 @@ abstract public class EndpointI implements Ice.Endpoint, java.lang.Comparable
     // Expand endpoint out in to separate endpoints for each local
     // host if endpoint was configured with no host set.
     //
-    public abstract java.util.ArrayList expand(boolean includeLoopback);
+    public abstract java.util.ArrayList expand();
 
     //
     // Return whether endpoint should be published in proxies
