@@ -502,7 +502,7 @@ final class UdpEndpointI extends EndpointI
     // only applies for ObjectAdapter endpoints.
     //
     public java.util.ArrayList
-    expand(boolean includeLoopback)
+    expand()
     {
         java.util.ArrayList endps = new java.util.ArrayList();
         if(_host.equals("0.0.0.0"))
@@ -512,11 +512,8 @@ final class UdpEndpointI extends EndpointI
             while(iter.hasNext())
             {
                 String host = (String)iter.next();
-		if(includeLoopback || hosts.size() == 1 || !host.equals("127.0.0.1"))
-		{
-                    endps.add(new UdpEndpointI(_instance, host, _port, _connect, _connectionId, _compress,
-					       hosts.size() == 1 || !host.equals("127.0.0.1")));
-		}
+                endps.add(new UdpEndpointI(_instance, host, _port, _connect, _connectionId, _compress,
+					   hosts.size() == 1 || !host.equals("127.0.0.1")));
             }
         }
         else
