@@ -367,7 +367,7 @@ final class EndpointI extends IceInternal.EndpointI
     // only applies for ObjectAdapter endpoints.
     //
     public java.util.ArrayList
-    expand(boolean includeLoopback)
+    expand()
     {
         java.util.ArrayList endps = new java.util.ArrayList();
         if(_host.equals("0.0.0.0"))
@@ -377,11 +377,8 @@ final class EndpointI extends IceInternal.EndpointI
             while(iter.hasNext())
             {
                 String host = (String)iter.next();
-		if(includeLoopback || hosts.size() == 1 || !host.equals("127.0.0.1"))
-		{
-                    endps.add(new EndpointI(_instance, host, _port, _timeout, _connectionId, _compress,
-					       hosts.size() == 1 || !host.equals("127.0.0.1")));
-		}
+                endps.add(new EndpointI(_instance, host, _port, _timeout, _connectionId, _compress,
+					hosts.size() == 1 || !host.equals("127.0.0.1")));
             }
         }
         else
